--- a/app/views/layouts/_header_logout.html.erb
+++ b/app/views/layouts/_header_logout.html.erb
@@ -1,1 +1,13 @@
+<body>
+<header>
+<% if user_signed_in? %>
 <%= link_to "レンジでレシピ",root_path %>
+<%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+<%= link_to "投稿フォーム",new_post_image_path %>
+<% else %>
+<%= link_to "レンジでレシピ",root_path %>
+<%= link_to "新規登録",new_user_registration_path %>
+<%= link_to "ログイン",new_user_session_path %>
+<% end %>
+</header>
+</body>
