--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <header>
+      <%= render 'layouts/header_logout' %>
+    </header>
     <%= yield %>
   </body>
 </html>
