--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,9 @@
 <div>
   <h3><%= @user.name %></h3>
   <%= image_tag @user.get_profile_image(100,100) %>
+  <% if @user == current_user %>
+  <p><%= link_to "プロフィール編集",edit_user_path %></p>
+  <% end %>
 </div>
 
 <!--ユーザーの投稿一覧-->
@@ -14,5 +17,6 @@
   <p>料理名:<%= post_image.shop_name %></p>
   <p>レシピ:<%= post_image.caption %></p>
   <p>ユーザーネーム: <%= post_image.user.name %></p>
+  <p><%= link_to "#{post_image.post_comments.count} コメント",post_image_path(post_image.id) %></p>
  </div>
  <% end %>
