--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,9 @@
+<div class="container">
+  <div class="row">
+    <h1>レンジでレシピＴＯＰ</h1>
+     <div class = "col-md-3"> </div>
+     <div class = "col-md-6"> </div>
+     <div class = "col-md-3"> </div>
+  </div>
+</div>
 
-<h1>レンジでレシピＴＯＰ</h1>
