--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,18 +2,21 @@
 <html>
   <head>
     <title>Rennziderecipe</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <header>
-      <%= render 'layouts/header_logout' %>
+      <%= render 'layouts/header' %>
     </header>
-    <%= yield %>
+      <%= yield %>
+    <fotter>
+      <%= render 'layouts/footer' %>
+    </fotter>
   </body>
 </html>
