--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -1,3 +1,14 @@
+<div class="container">
+  <div class="row">
+     <div class = "col-md-3"> </div>
+     <div class = "col-md-6">
+      <!--ユーザーの投稿一覧-->
+      <%= render 'list', post_images: @post_images %>
+     </div>
+     <div class = "col-md-3"> </div>
+  </div>
+</div>
+
 <!--ユーザーの投稿一覧-->
 <%= render 'list', post_images: @post_images %>
 
