--- a/app/views/post_images/new.html.erb
+++ b/app/views/post_images/new.html.erb
@@ -1,11 +1,15 @@
-<h1>レシピ投稿フォーム</h1>
+<div class="container">
+ <div class="row">
+  <div class = "col-md-3"> </div>
+  <div class = "col-md-6">
+   <h1>レシピ投稿フォーム</h1>
 
-<% if @post_image.errors.any? %>
+ <% if @post_image.errors.any? %>
  <%= @post_image.errors.count %>件のエラーが発生しました
  <ul>
-   <%= @post_image.errors.full_messages.each do |message| %>
-    <li><%= message %></li>
-   <% end %>
+  <%= @post_image.errors.full_messages.each do |message| %>
+   <li><%= message %></li>
+  <% end %>
   </ul>
  <% end %>
 
@@ -16,5 +20,9 @@
       <%= f.text_field :shop_name %>
     <h4>レシピ</h4>
       <%= f.text_area :caption %>
-    <%= f.submit '投稿' %>
+      <%= f.submit '投稿' %>
   <% end %>
+  </div>
+  <div class = "col-md-3"> </div>
+</div>
+</div>
