--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,10 @@
-<h2>Sign up</h2>
+<div class="container">
+  <div class ="row">
+   <div class="col-md-4"></div>
+   <div class="col-md-4">
+   <h2>Sign up</h2>
 
-<%= form_with(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
@@ -32,3 +36,7 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+<div class="col-md-4">
+</div>
+</div>
