--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,21 +1,11 @@
-<footer class="bg-dark text-white pt-5 pb-4">
-      <div class="container">
-        <div class="row no-gutters">
-          <div class="col-md-4">
-            <p>簡単お料理SNS</p>
-          </div>
-          <div class="col-md-8">
-            <h6 class="text-white mt-2 mb-3">Link</h6>
-            <ul class="p-0 list-unstyled">
-              <li>
-                <a href="" title="About" class="text-white-50">会社概要</a>
-              </li>
-              <li>
-                <a href="" title="License informations" class="text-white-50">プライバシーポリシー</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </footer>
-  </body>
+</body>
+  <footer class="text-dark pt-2 pb-2">
+  <div class="container">
+  <div class ="row">
+   <div class="col-md-4"></div>
+   <div class="col-md-4">お料理SNS</div>
+   <div class="col-md-4">
+  </div>
+  </div>
+  </footer>
+</body>
