--- a/app/views/post_images/_list.html.erb
+++ b/app/views/post_images/_list.html.erb
@@ -1,5 +1,5 @@
 <!--ユーザーの投稿一覧-->
-<% post_images.each do |post_image| %>
+<% @post_images.each do |post_image| %>
 <div>
   <p>投稿ユーザー画像:<%= image_tag post_image.user.get_profile_image(50,50) %></p>
   <%= link_to post_image_path(post_image.id) do %>
