--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -14,7 +14,6 @@
     <%= link_to "削除",post_image_path(@post_image),method: :delete %>
    <% end %>
 
-
  <% if @post_image.favorited_by?(current_user) %>
    <p>
     <%= link_to post_image_favorites_path(@post_image),method: :delete do %>
@@ -32,7 +31,7 @@
 
 
   <p>コメント件数:<%= @post_image.post_comments.count %></p>
-  <%= @post_image.post_comments.each do |post_comment| %>
+  <% @post_image.post_comments.each do |post_comment| %>
       <p><%= image_tag post_comment.user.get_profile_image(100,100) %></p>
       <%= post_comment.user.name %>
       <%= post_comment.created_at.strftime('%Y%m%d') %><%= post_comment.comment %>
