--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,6 +9,8 @@
       </button>
 
         <%= link_to "レンジでレシピ",root_path, class: 'nav-link text-dark' %>
+        <!--検索機能-->
+        <%= render 'layouts/search' %>
 
         <%= link_to "レシピ一覧",post_images_path, class: 'nav-link text-dark' %>
 
