--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,9 +1,14 @@
 <div class="container">
   <div class="row">
-    <h1>レンジでレシピＴＯＰ</h1>
-     <div class = "col-md-3"> </div>
-     <div class = "col-md-6"> </div>
-     <div class = "col-md-3"> </div>
+   <div class = "col-md-3"> </div>
+   <div class = "col-md-3">
+    <p>最新レシピ</p>
+    <%= render 'post_images/list', post_images: @post_images %>
+   </div>
+   <div class = "col-md-3">
+     <p>人気レシピ一覧</p>
+   </div>
+   <div class = "col-md-3"> </div>
   </div>
 </div>
 
