--- a/app/views/post_images/new.html.erb
+++ b/app/views/post_images/new.html.erb
@@ -17,7 +17,7 @@
     <h4>画像</h4>
       <%= f.file_field :image, accept: "image/*" %>
     <h4>料理名</h4>
-      <%= f.text_field :shop_name %>
+      <%= f.text_field :recipe_name %>
     <h4>レシピ</h4>
       <%= f.text_area :caption %>
       <%= f.submit '投稿' %>
