--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -2,8 +2,8 @@
  <div class="row">
   <div class = "col-md-3"> </div>
   <div class = "col-md-3">
-   <%= image_tag @post_image.image %>
-   <p>料理名:<%= @post_image.shop_name %>
+   <%= image_tag @post_image.image, :size =>'200x200' %>
+   <p>料理名:<%= @post_image.recipe_name %>
    <p>レシピ:<%= @post_image.caption %> </p>
    <p>投稿ユーザー画像：<%= image_tag @post_image.user.get_profile_image(100,100) %></p>
    <p>ユーザーネーム:<%= @post_image.user.name %></p>
