--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -14,20 +14,25 @@
     <%= link_to "削除",post_image_path(@post_image),method: :delete %>
    <% end %>
 
- <% if @post_image.favorited_by?(current_user) %>
-   <p>
+   <% if @post_image.favorited_by?(current_user) %>
     <%= link_to post_image_favorites_path(@post_image),method: :delete do %>
       ♥<%= @post_image.favorites.count %>いいね
     <% end %>
-   </p>
+
     <% else %>
-   <p>
     <%= link_to post_image_favorites_path(@post_image),method: :post do %>
       ♡<%= @post_image.favorites.count %>いいね
    <% end %>
-   </p>
   <% end %>
 
+  <td><% if current_user %>
+      <% if @user.follower?(current_user) %>
+          <p><%=link_to "フォロー外す", user_relationships_path(user.id), method: :delete %></p>
+      <% else %>
+          <p><%=link_to "フォローする", user_relationships_path(user.id), method: :post %></p>
+      <% end %>
+      <% end %>
+      </td>
 
 
   <p>コメント件数:<%= @post_image.post_comments.count %></p>
