--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -25,13 +25,12 @@
    <% end %>
   <% end %>
 
-  <td><% if current_user %>
-      <% if @user.follower?(current_user) %>
-          <p><%=link_to "フォロー外す", user_relationships_path(user.id), method: :delete %></p>
+  <td><% if current_user.follower?(@user) %>
+          <p><%=link_to "フォロー外す", user_relationships_path(@user.id), method: :delete %></p>
       <% else %>
-          <p><%=link_to "フォローする", user_relationships_path(user.id), method: :post %></p>
+          <p><%=link_to "フォローする", user_relationships_path(@user.id), method: :post %></p>
       <% end %>
-      <% end %>
+
       </td>
 
 
