--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -1,9 +1,12 @@
 <div class="container">
   <div class="row">
      <div class = "col-md-3"> </div>
-     <div class = "col-md-6">
+     <div class = "col-md-3">
       <!--ユーザーの投稿一覧-->
       <%= render 'list', post_images: @post_images %>
+     </div>
+     <div class = "col-md-3">
+       <%= render 'relationships/relationship' %>
      </div>
      <div class = "col-md-3"> </div>
   </div>
