--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -9,10 +9,12 @@
    <p>ユーザーネーム:<%= @post_image.user.name %></p>
    <p>投稿日時：<%= @post_image.created_at.strftime('%Y/%m/%d') %></p>
   </div>
-  <div class = "col-md-3">
+  <div class = "col-md-4">
    <% if @post_image.user == current_user %>
     <%= link_to "削除",post_image_path(@post_image),method: :delete %>
    <% end %>
+
+   <%= render 'relationships/relationship' %>
 
    <% if @post_image.favorited_by?(current_user) %>
     <%= link_to post_image_favorites_path(@post_image),method: :delete do %>
@@ -24,15 +26,6 @@
       ♡<%= @post_image.favorites.count %>いいね
    <% end %>
   <% end %>
-
-  <td><% if current_user.follower?(@user) %>
-          <p><%=link_to "フォロー外す", user_relationships_path(@user.id), method: :delete %></p>
-      <% else %>
-          <p><%=link_to "フォローする", user_relationships_path(@user.id), method: :post %></p>
-      <% end %>
-
-      </td>
-
 
   <p>コメント件数:<%= @post_image.post_comments.count %></p>
   <% @post_image.post_comments.each do |post_comment| %>
@@ -50,6 +43,6 @@
    <% end %>
 
 </div>
-<div class = "col-md-3"> </div>
+<div class = "col-md-2"> </div>
 </div>
 </div>
