--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <%= render 'layouts/header' %>
     </header>
       <%= yield %>
-    <fotter>
+    <footer>
       <%= render 'layouts/footer' %>
     </fotter>
   </body>
