--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,17 +2,17 @@
 <div class="container">
  <div class="row">
   <div class = "col-md-3"> </div>
-  <div class = "col-md-3">
-  <h3><%= @user.name %></h3>
-  <%= image_tag @user.get_profile_image(100,100) %>
-  <% if @user == current_user %>
-  <p><%= link_to "プロフィール編集",edit_user_path %></p>
-  <% end %>
-  </div>
+  <div class = "col-md-6">
+   <table class='table'>
+   <th><%= @user.name %></th>
+   <th><%= image_tag @user.get_profile_image(100,100) %></th>
+     <% if @user == current_user %>
+     <th><%= link_to "プロフィール編集",edit_user_path %></th>
+     <% end %>
+     </div>
+
+  </table>
   <div class = "col-md-3">
   <!--ユーザーの投稿一覧-->
   <%= render 'post_images/list',post_images: @post_images %>
   </div>
-<div class = "col-md-3"> </div>
-</div>
-</div>
