--- a/app/views/post_images/_list.html.erb
+++ b/app/views/post_images/_list.html.erb
@@ -1,14 +1,12 @@
 <!--ユーザーの投稿一覧-->
-
-     <% @post_images.each do |post_image| %>
-      <p>投稿ユーザー画像:<%= image_tag post_image.user.get_profile_image(50,50) %></p>
-      <%= link_to post_image_path(post_image.id) do %>
-       <%= image_tag post_image.get_image, :size =>'200x200' %>
-      <% end %>
-      <p>料理名:<%= post_image.recipe_name %></p>
-      <p>レシピ:<%= post_image.caption %></p>
-      <p>ユーザーネーム: <%= post_image.user.name %></p>
-      <p><%= link_to "#{post_image.post_comments.count} コメント",post_image_path(post_image.id) %></p>
-     <% end %>
-
-<%#= paginate post_images %>
+<% @post_images.each do |post_image| %>
+  <p><%= post_image.recipe_name %></p>
+  <%= link_to post_image_path(post_image.id) do %>
+   <%= image_tag post_image.get_image, :size =>'200x200' %>
+  <% end %>
+  <!--ユーザーネーム・ユーザー写真--->
+  <p><%= post_image.user.name %><%= image_tag post_image.user.get_profile_image(50,50) %></p>
+  <p>作り方:<%= post_image.caption %></p>
+  <p><%= link_to "#{post_image.post_comments.count} コメント",post_image_path(post_image.id) %></p>
+<% end %>
+ <%#= paginate post_images %>
