--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -1,12 +1,14 @@
 <div class="container">
   <div class="row">
-     <div class = "col-md-3"> </div>
+     <div class = "col-md-3">
+       <%= render 'users/list',user: @user,post_image: @post_image %>
+     </div>
      <div class = "col-md-3">
       <!--ユーザーの投稿一覧-->
       <%= render 'list', post_images: @post_images %>
      </div>
      <div class = "col-md-3">
-       <%= render 'relationships/relationship' %>
+       <%#= render 'relationships/relationship' %>
      </div>
      <div class = "col-md-3"> </div>
   </div>
