--- a/app/views/post_images/new.html.erb
+++ b/app/views/post_images/new.html.erb
@@ -18,7 +18,7 @@
       <%= f.file_field :image, accept: "image/*" %>
     <h4>料理名</h4>
       <%= f.text_field :recipe_name %>
-    <h4>レシピ</h4>
+    <h4>作り方</h4>
       <%= f.text_area :caption %>
       <%= f.submit '投稿' %>
   <% end %>
