--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -5,9 +5,8 @@
    <%= image_tag @post_image.image, :size =>'200x200' %>
    <p>料理名:<%= @post_image.recipe_name %>
    <p>レシピ:<%= @post_image.caption %> </p>
-   <p>投稿ユーザー画像：<%= image_tag @post_image.user.get_profile_image(100,100) %></p>
-   <p>ユーザーネーム:<%= @post_image.user.name %></p>
-   <p>投稿日時：<%= @post_image.created_at.strftime('%Y/%m/%d') %></p>
+   <p><%= @post_image.user.name %><%= image_tag @post_image.user.get_profile_image(100,100) %></p>
+   <p><%= @post_image.created_at.strftime('%Y/%m/%d') %></p>
   </div>
   <div class = "col-md-4">
    <% if @post_image.user == current_user %>
