--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,27 @@
-<h2>プロフィール編集</h2>
-<%= form_with model:@user do |f| %>
-  <label for="inputName">Name</label>
-  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
-  <label for="inputImage">ProfileImage</label>
-  <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
-  <%= f.submit "変更を保存" %>
-<% end %>
+<div class="container">
+ <div class="row">
+  <div class = "col-md-3"> </div>
+  <div class = "col-md-6">
+    <h2>プロフィール編集</h2>
+    <%= form_with model:@user do |f| %>
+     <div class ="form-group">
+      <label for="inputName">Name</label>
+      <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
+      </div>
+
+      <div class ="form-group">
+      <label for="inputImage">ProfileImage</label>
+      <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
+      </div>
+
+      <div class ="form-group">
+      <label for ="user_intoroduction">Introduction</label>
+      <p><%= f.text_area :introduction %></p>
+      </div>
+        <%= f.submit "変更を保存" %>
+      </div>
+     <% end %>
+
+  <div class = "col-md-3"> </div>
+ </div>
+</div>
