--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,8 @@
 <div class="container">
   <div class="row">
-   <div class = "col-md-3"> </div>
+   <div class = "col-md-3">
+   <%#= render 'users/list', user: @user,post_image: @post_image %>
+   </div>
    <div class = "col-md-3">
     <p>最新レシピ</p>
     <!--ユーザーの投稿一覧-->
