--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -4,11 +4,23 @@
      <tr><%= image_tag user.get_profile_image(50,50) %></tr>
     <tr><th>name</th><th><%= user.name %></th></tr>
     <tr><th>introduction</th><th><%#= user.introduction %></th></tr>
+    </tr>
+    <tr>
+    <th>follows</th>
+    <th><%= link_to user.followings.count, user_followings_path(user) %></th>
+    </tr>
+    <tr>
+    <th>followers</th>
+    <th><%= link_to user.followers.count, user_followers_path(user) %></th>
+    </tr>
    </tbody>
   </table>
   <%= link_to edit_user_path(user.id),class:"btn btn-outline-secondary btn-block" do %>
 　  <i class="fas fa-user-cog"></i>
 　<% end %>
+
+
+
 　<%= link_to new_post_image_path(user.id),class:"btn btn-outline-secondary btn-block" do %>
 　レシピ投稿
   <% end %>
