indecレイアウト

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,9 @@
     <header>
       <%= render 'layouts/header' %>
     </header>
+    <main>
       <%= yield %>
+    </main>
     <footer>
       <%= render 'layouts/footer' %>
     </fotter>
