--- a/app/views/post_images/_list.html.erb
+++ b/app/views/post_images/_list.html.erb
@@ -2,8 +2,8 @@
 <table class='table table-hover table-inverse'>
   <thead>
         <tr>
-          <th>image</th>
-          <th>name</th>
+          <th>投稿一覧</th>
+          <th></th>
           <th></th>
           <th></th>
           <th></th>
