--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -17,9 +17,12 @@
   </table>
   <%= link_to edit_user_path(user.id),class:"btn btn-outline-secondary btn-block" do %>
 　  <i class="fas fa-user-cog"></i>
+　  プロフィール編集
 　<% end %>
 
-
+  <%= link_to favorites_user_path(user.id),class:"btn btn-outline-secondary btn-block" do %>
+　 いいね一覧
+  <% end %>
 
 　<%= link_to new_post_image_path(user.id),class:"btn btn-outline-secondary btn-block" do %>
 　レシピ投稿
