--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,7 +3,7 @@
   <div class = "col-md-3"> </div>
   <div class = "col-md-6">
     <h2>プロフィール編集</h2>
-    <%= form_with model:@user do |f| %>
+    <%= form_with model:current_user do |f| %>
      <div class ="form-group">
       <label for="inputName">Name</label>
       <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
