--- a/app/views/post_images/_list.html.erb
+++ b/app/views/post_images/_list.html.erb
@@ -22,16 +22,20 @@
          <!--ユーザーネーム・ユーザー写真--->
          <td><%= post_image.user.name %><%= image_tag post_image.user.get_profile_image(50,50) %></td>
          <td>作り方:<%= post_image.caption %></td>
-         <td><% if post_image.favorited_by?(current_user) %>
-             <%= link_to post_image_favorites_path(post_image),method: :delete do %>
-               ♥<%= post_image.favorites.count %>いいね
-             <% end %>
-
+                              <%# byebug %>
+         <td><% if current_user.own?(post_image) %>
              <% else %>
-             <%= link_to post_image_favorites_path(post_image),method: :post do %>
+              <% if post_image.favorited_by?(current_user) %>
+              <%= link_to post_image_favorites_path(post_image),method: :delete do %>
+               ♥<%= post_image.favorites.count %>いいね
+              <% end %>
+
+              <% else %>
+             　<%= link_to post_image_favorites_path(post_image),method: :post do %>
                ♡<%= post_image.favorites.count %>いいね
-            <% end %>
-           <% end %>
+            　<% end %>
+           　　<% end %>
+           　<% end %>
          </td>
          <td><%= link_to "#{post_image.post_comments.count} コメント",post_image_path(post_image.id) %></td>
        </tr>
