--- a/app/views/ranks/_rank.html.erb
+++ b/app/views/ranks/_rank.html.erb
@@ -1,8 +1,22 @@
-<!--配列の1つ目から順に1位、２位と表示される-->
-<% @post_image_ranks.each.with_index(1) do |post_image,i| %>
+
+
+<p><% @post_image_favorite_ranks.each.with_index(1) do |post_image,i| %>
   第<%= i %>位
-  <%# @all_ranks.each.with_index(1) do |post_image, i| %>
-    第<%#= i %>位
-    <%#= render partial: "post_image", local:{ post_image: @post_images} %>
-<% end %>
-<%# end %>
+ 　<%= link_to post_image_path(post_image.id) do %>
+   <%= image_tag post_image.get_image, :size =>'100x100' %>
+   <% end %>
+   <%= post_image.recipe_name %>
+
+   <% if post_image.favorited_by?(current_user) %>
+     <%= link_to post_image_favorites_path(post_image),method: :delete do %>
+      ♥<%= post_image.favorites.count %>いいね
+     <% end %>
+   <% else %>
+     <%= link_to post_image_favorites_path(post_image),method: :post do %>
+      ♡<%= post_image.favorites.count %>いいね
+     <% end %>
+   <% end %>
+
+     <%= link_to "#{post_image.post_comments.count} コメント",post_image_path(post_image.id) %>
+</p><% end %>
+
