--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
         <%= render 'layouts/search' %>
 
 
-        <%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post, class: 'nav-link text-dark' %>
+        <%= link_to 'Guest', users_guest_sign_in_path, method: :post, class: 'nav-link text-dark' %>
 
         <% if user_signed_in? %>
           <%= link_to "Recipe",post_images_path, class: 'nav-link text-dark' %>
@@ -25,6 +25,11 @@
           <%= link_to "Mypage",user_path(current_user.id), class: 'nav-link text-dark' %>
 
           <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %>
+
+          <% elsif admin_signed_in? %>
+         <li>
+          <%= link_to "ログアウト", destroy_admin_session_path, method: :delete,class: 'nav-link text-dark' %>
+         </li>
 
         <% else %>
 
