--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -8,14 +8,16 @@
 
   </div>
   <div class = "col-md-4">
-   <p><%= @post_image.user.name %><%= image_tag @post_image.user.get_profile_image(100,100) %></p>
+   <p><%#= @post_image.user.name %><%#= image_tag @post_image.user.get_profile_image(100,100) %></p>
    <p><%= @post_image.created_at.strftime('%Y/%m/%d') %></p>
    <% if @post_image.user == current_user %>
-    <%= link_to "削除",post_image_path(@post_image),method: :delete %>
+    <%= link_to "削除",post_image_path(@post_image.id),method: :delete %>
    <% end %>
 
-   <%= render 'relationships/relationship' %>
-
+   <%#= render 'relationships/relationship' %>
+   <% if current_user.own?(@post_image) %>
+   ♥<%= @post_image.favorites.count %>いいね
+   <% else %>
    <% if @post_image.favorited_by?(current_user) %>
     <%= link_to post_image_favorites_path(@post_image),method: :delete do %>
       ♥<%= @post_image.favorites.count %>いいね
@@ -26,23 +28,25 @@
       ♡<%= @post_image.favorites.count %>いいね
    <% end %>
   <% end %>
+  <% end %>
 
   <p>コメント件数:<%= @post_image.post_comments.count %></p>
   <% @post_image.post_comments.each do |post_comment| %>
-      <p><%= image_tag post_comment.user.get_profile_image(100,100) %></p>
+      <%= image_tag post_comment.user.get_profile_image(10,10) %>
       <%= post_comment.user.name %>
       <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
       <% if post_comment.user == current_user %>
-        <%= link_to "削除",post_image_post_comment_path(post_comment.post_image,post_comment), method: :delete %>
+      <%= link_to "削除",post_image_post_comment_path(post_comment.post_image,post_comment), method: :delete %>
       <% end %>
   <% end %>
 
-   <%= form_with model:[@post_image, @post_comment] do |f| %>
-    <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
+
+   <div><%= form_with model:[@post_image, @post_comment] do |f| %>
+    <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %></div>
     <%= f.submit "送信する" %>
    <% end %>
 
+<div class = "col-md-2"></div>
 </div>
-<div class = "col-md-2"> </div>
 </div>
 </div>
