--- a/app/views/relationships/_relationship.html.erb
+++ b/app/views/relationships/_relationship.html.erb
@@ -1,5 +1,7 @@
 フォロー数：<%= @user.followings.count %>
 フォロワー数：<%= @user.followers.count %>
+<% if current_user.own?(@post_image) %>
+<% else %>
 <% if current_user %>
   <% if @user.follower?(current_user) %>
 <p><%=link_to "フォロー外す", user_relationships_path(@user.id), method: :delete %></p>
@@ -7,3 +9,4 @@
 <p><%=link_to "フォローする", user_relationships_path(@user.id), method: :post %></p>
   <% end %>
   <% end %>
+<% end %>
