--- a/app/views/admins/users/index.html.erb
+++ b/app/views/admins/users/index.html.erb
@@ -1,11 +1,8 @@
-<p id ="notice"></p>
-  <div class ="container px-5 px-sm-0">
+<div class ="container px-5 px-sm-0">
    <div class = "row">
-    <div class ="col-md-3">
-     <%= render 'list',user: @user,book: @book%>
-　　</div>
-    <div class ="col-md-8 offset-md-1">
-     <h1>Users</h1>
+    <div class ="col-md-2"></div>
+    <div class ="col-md-10">
+<h1>Users</h1>
       <table class="table">
         <tr>
           <th>image</th><th>name</th>
@@ -22,6 +19,4 @@
        <% end %>
         </tbody>
       </table>
-     </div>
-    </div>
-   </div>
+      </div>
