--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,36 +8,47 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
+
+        <% if user_signed_in? %>
+
         <%= link_to "レンジdeレシピ",root_path, class: 'nav-link text-dark' %>
         <!--検索機能-->
         <%= render 'layouts/search' %>
 
-
         <%= link_to 'Guest', users_guest_sign_in_path, method: :post, class: 'nav-link text-dark' %>
 
-        <% if user_signed_in? %>
-          <%= link_to "Recipe",post_images_path, class: 'nav-link text-dark' %>
+        <%= link_to "Recipe",post_images_path, class: 'nav-link text-dark' %>
 
-          <%= link_to "User",users_path, class: 'nav-link text-dark' %>
+        <%= link_to "User",users_path, class: 'nav-link text-dark' %>
 
-          <%= link_to "Post",new_post_image_path, class: 'nav-link text-dark' %>
+        <%= link_to "Post",new_post_image_path, class: 'nav-link text-dark' %>
 
-          <%= link_to "Mypage",user_path(current_user.id), class: 'nav-link text-dark' %>
+        <%= link_to "Mypage",user_path(current_user.id), class: 'nav-link text-dark' %>
 
-          <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %>
+        <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %>
 
-          <% elsif admin_signed_in? %>
-         <li>
-          <%= link_to "ログアウト", destroy_admin_session_path, method: :delete,class: 'nav-link text-dark' %>
-         </li>
+        <% elsif admin_signed_in? %>
+        <%= link_to "Admin Log out", destroy_admin_session_path, method: :delete,class: 'nav-link text-dark' %>
 
         <% else %>
 
-          <%= link_to "Sign up",new_user_registration_path, class: 'nav-link text-dark' %>
+        <%= link_to 'AdminLogin', new_admin_session_path, class: 'nav-link text-dark' %>
 
-          <%= link_to "Login",new_user_session_path, class: 'nav-link text-dark' %>
+        <%= link_to 'Guest', users_guest_sign_in_path, method: :post, class: 'nav-link text-dark' %>
+
+        <%= link_to "Recipe",post_images_path, class: 'nav-link text-dark' %>
+
+        <%= link_to "Sign up",new_user_registration_path, class: 'nav-link text-dark' %>
+
+        <%= link_to "Login",new_user_session_path, class: 'nav-link text-dark' %>
 
         <% end %>
+
+        <%# if admin_signed_in? %>
+        <%#= link_to "Admin Log out", destroy_admin_session_path, method: :delete,class: 'nav-link text-dark' %>
+        <%# else %>
+
+        <%# end %>
     </div>
   </nav>
 </header>
