--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -11,7 +11,8 @@
    <p><%#= @post_image.user.name %><%#= image_tag @post_image.user.get_profile_image(100,100) %></p>
    <p><%= @post_image.created_at.strftime('%Y/%m/%d') %></p>
    <% if @post_image.user == current_user %>
-    <%= link_to "削除",post_image_path(@post_image.id),method: :delete %>
+   <%# elsif @post_image.user == admin %>
+    <%#= link_to "削除",post_image_path(@post_image.id),method: :delete %>
    <% end %>
 
    <%#= render 'relationships/relationship' %>
