--- a/app/views/admins/post_images/index.html.erb
+++ b/app/views/admins/post_images/index.html.erb
@@ -15,7 +15,7 @@
     </tr>
    </thead>
     <tbody>
-       <% @post_images.each do |post_image| %>
+       <% @post_images.each do |post_image| %>cd
        <tr>
         <td>
          <%= link_to admins_post_image_path(post_image.id) do %>
