--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -38,15 +38,17 @@
       <%= post_comment.user.name %>
       <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
       <% if post_comment.user == current_user %>
+      <%# if current_user.admin? && !(current_user == user) %>
       <%= link_to "削除",post_image_post_comment_path(post_comment.post_image,post_comment), method: :delete %>
       <% end %>
   <% end %>
 
 
    <div><%= form_with model:[@post_image, @post_comment] do |f| %>
-    <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %></div>
+    <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
     <%= f.submit "送信する" %>
    <% end %>
+   </div>
 
 <div class = "col-md-2"></div>
 </div>
