--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
   <div class ="container px-5 px-sm-0">
    <div class = "row">
     <div class ="col-md-3">
-     <%= render 'list',user: @user,book: @book%>
+     <%= render 'list',user: @user%>
 　　</div>
     <div class ="col-md-8 offset-md-1">
      <h1>Users</h1>
@@ -18,6 +18,11 @@
           <td><%= image_tag user.get_profile_image(100,100) %></td>
           <td><%= user.name %></td>
           <td><%= link_to "Show", user_path(user.id) %></td>
+          <td><% if current_user.admin? && !(current_user == user) %>
+    |     <%= link_to "delete", user, method: :delete,
+                                  data: { confirm: "You sure?" } %>
+          <% end %>
+          </td>
         </tr>
        <% end %>
         </tbody>
