管理者投稿削除機能追加

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
 
         <%= link_to "User",users_path, class: 'nav-link text-dark' %>
 
-        <%= link_to "Post",new_post_image_path, class: 'nav-link text-dark' %>
+        <%#= link_to "Post",new_post_image_path, class: 'nav-link text-dark' %>
 
         <%= link_to "Mypage",user_path(current_user.id), class: 'nav-link text-dark' %>
 
