いいね非同期化完了

--- a/app/views/favorites/create.js.erb
+++ b/app/views/favorites/create.js.erb
@@ -1,1 +1,2 @@
-('#favorite_<%= @post_image.id %>').html("<%= j(render partial: 'favorites/favorite', locals: { post_image: @post_image }) %>");
+
+$("#favorite_btn_<%= @post_image.id %>").html("<%= escape_javascript(render partial: 'favorites/favorite', locals: {post_image: @post_image}) %>");
