--- a/app/views/post_images/edit.html.erb
+++ b/app/views/post_images/edit.html.erb
@@ -9,6 +9,8 @@
       <%= f.file_field :image, accept: "image/*" %>
     <h4>料理名</h4>
       <%= f.text_field :recipe_name %>
+    <h4>材料</h4>
+      <%= f.text_field :ingredients %>
     <h4>作り方</h4>
       <%= f.text_area :caption %>
       <%= f.submit 'Update' %>
