--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -4,6 +4,7 @@
   <div class = "col-md-3">
    <%= image_tag @post_image.image, :size =>'200x200' %>
    <p>料理名:<%= @post_image.recipe_name %>
+   <p>材料:<%= @post_image.ingredients %></p>
    <p>レシピ:<%= @post_image.caption %> </p>
 
   </div>
@@ -20,26 +21,14 @@
    <% end %>
 
    <%#= render 'relationships/relationship' %>
-   <% if current_user.own?(@post_image) %>
-   ♥<%= @post_image.favorites.count %>いいね
-   <% else %>
-   <% if @post_image.favorited_by?(current_user) %>
-    <%= link_to post_image_favorites_path(@post_image),method: :delete do %>
-      ♥<%= @post_image.favorites.count %>いいね
-    <% end %>
-
-    <% else %>
-    <%= link_to post_image_favorites_path(@post_image),method: :post do %>
-      ♡<%= @post_image.favorites.count %>いいね
-   <% end %>
-  <% end %>
-  <% end %>
+   <%#= render 'favorites/favorite' %>
+   <div id="favorite_btn_<%= @post_image.id %>"><%= render partial: 'favorites/favorite',locals: {post_image: @post_image} %></div>
 
   <p>コメント件数:<%= @post_image.post_comments.count %></p>
   <% @post_image.post_comments.each do |post_comment| %>
-      <%= image_tag post_comment.user.get_profile_image(10,10) %>
+      <p><%= image_tag post_comment.user.get_profile_image(10,10) %>
       <%= post_comment.user.name %>
-      <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
+      <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %></p>
       <% if post_comment.user == current_user %>
       <%= link_to "削除",post_image_post_comment_path(post_comment.post_image,post_comment), method: :delete %>
       <% elsif current_user.admin? && !(current_user == @user) %>
