--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,9 +18,9 @@
           <td><%= image_tag user.get_profile_image(100,100) %></td>
           <td><%= user.name %></td>
           <td><%= link_to "Show", user_path(user.id) %></td>
-          <td><% if current_user.admin? && !(current_user == user) %>
+          <td><% if current_user.admin? %>
     |     <%= link_to "delete", user, method: :delete,
-                                  data: { confirm: "You sure?" } %>
+                                 data: { confirm: "You sure?" } %>
           <% end %>
           </td>
         </tr>
