--- a/app/views/users/_favorites.html.erb
+++ b/app/views/users/_favorites.html.erb
@@ -24,5 +24,10 @@
     <% end %>
  </table>
 <% else %>
-  <p>ユーザーはいません</p>
+<table class='table table-hover table-inverse'>
+  <thead>
+  <tr><th></th></tr>
+  <tr><th>いいね一覧</th></tr>
+  <tr><td>ユーザーはいません</td></tr>
+  </thead>
 <% end %>
