--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -11,10 +11,25 @@
     <!--ユーザーの投稿一覧-->
 
     <% if user_signed_in? %>
-    <p>Ranking</p>
+    <h3><i class="fas fa-crown"></i>Ranking</h3>
    <%= render 'ranks/rank',rank: @post_image_favorite_ranks,post_image: @post_images %>
    <%= render 'post_images/list' %>
    <% else %>
+   <%= link_to new_user_registration_path do %>
+   <%= image_tag ('udonn.jpg'), :size =>'300x300' %>
+   <% end %>
+   <%= link_to new_user_registration_path do %>
+   <%= image_tag ('niku.jpg'), :size =>'300x300' %>
+   <% end %>
+   <%#= link_to image_tag ('udonn.jpg'),users_guest_sign_in_path,size: '300x300' %>
+   <%#= image_tag 'niku.jpg',size: '300x300' %>
+   <%#= image_tag 'tyawannmusi2.jpg',size: '300x300' %>
+   <%#= image_tag 'misosiru.jpg',size: '300x300' %>
+   <p>電子レンジでだけで簡単に作れるレシピ投稿サイト<br>
+   <strong>レンジdeレシピ</strong><br>
+   <p>簡単<%= link_to 'ログイン', users_guest_sign_in_path, method: :post %>で今日のご飯を決めちゃいましょ!</p>
+
+
    <% end %>
 
    </div>
