--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,7 +20,7 @@
           <td><%= link_to "Show", user_path(user.id) %></td>
           <td><% if current_user.admin? %>
     |     <%= link_to "delete", user, method: :delete,
-                                 data: { confirm: "You sure?" } %>
+                                 data: { confirm: "本当に消しますか?" } %>
           <% end %>
           </td>
         </tr>
