--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -16,10 +16,10 @@
    <%= render 'post_images/list' %>
    <% else %>
    <%= link_to new_user_registration_path do %>
-   <%= image_tag asset_path ('udonn.jpg'), :size =>'300x300' %>
+   <%= image_tag  ('udonn.jpg'), :size =>'300x300' %>
    <% end %>
    <%= link_to new_user_registration_path do %>
-   <%= image_tag asset_path ('niku.jpg'), :size =>'300x300' %>
+   <%= image_tag  ('niku.jpg'), :size =>'300x300' %>
    <% end %>
    <%#= link_to image_tag ('udonn.jpg'),users_guest_sign_in_path,size: '300x300' %>
    <%#= image_tag 'niku.jpg',size: '300x300' %>
