--- a/app/views/admins/post_images/_list.html.erb
+++ b/app/views/admins/post_images/_list.html.erb
@@ -13,7 +13,7 @@
        <% @post_images.each do |post_image| %>
        <tr>
         <td>
-         <%= link_to admins_post_image_path(post_image.id) do %>
+         <%= link_to admins_post_image_path(:admin, post_image.id) do %>s
           <%= image_tag post_image.get_image, :size =>'100x100' %>
          <% end %>
         </td>
@@ -22,22 +22,11 @@
          <td><%= post_image.user.name %><%= image_tag post_image.user.get_profile_image(50,50) %></td>
          <td>作り方:<%= post_image.caption %></td>
                               <%# byebug %>
-         <td><%# if current_user.own?(post_image) %>
+         <td>
               <%#= link_to "削除",post_image_path(@post_image_id),method: :delete %>
               ♥<%= post_image.favorites.count %>いいね
-             <%# else %>
-              <% #if post_image.favorited_by?(current_user) %>
-              <%#= link_to post_image_favorites_path(post_image),method: :delete do %>
-               <%#= post_image.favorites.count %>
-              <%# end %>
-
-              <%# else %>
-             <%#= link_to post_image_favorites_path(post_image),method: :post do %>
-               <%#= post_image.favorites.count %>
-            <%# end %>
-           <%# end %>
            <% end %>
-           
+
          </td>
          <td><%= link_to "#{post_image.post_comments.count} コメント",admins_post_image_path(post_image.id) %></td>
        </tr>
