--- a/app/views/post_images/_ingredient_fields.html.erb
+++ b/app/views/post_images/_ingredient_fields.html.erb
@@ -1,6 +1,6 @@
 <div class="nested-fields">
   <div class="row mx-auto">
-    <div class="col-5"><%= f.text_field :ingredients, class: "form-control", placeholder: "材料" %></div>
+    <div class="col-5"><%= f.text_field :name, class: "form-control", placeholder: "材料" %></div>
     <div class="offset-1 col-2"><%#= f.text_field :quantity, class: "form-control", placeholder: "分量" %></div>
     <div class="offset-1 col-1 px-0 w-auto">
       <%= link_to_remove_association "削除", f, class: "btn btn-secondary btn-block" %>
