--- a/app/views/post_images/new.html.erb
+++ b/app/views/post_images/new.html.erb
@@ -13,20 +13,51 @@
   </ul>
  <% end %>
 
-  <%= form_with model: @post_image do |f| %>
+  <%= form_with model: @post_image do |form| %>
     <h4>画像</h4>
-      <%= f.file_field :image, accept: "image/*" %>
+      <%= form.file_field :image, accept: "image/*" %>
     <h4>料理名</h4>
-      <%= f.text_field :recipe_name %>
-    <%= f.nested_fields_for :ingredients, wrapper_tag: :p do |f| %>
-    <h4>材料</h4>
-      <p><%= f.text_field :ingredients %>
-      <%= f.remove_nested_fields_link 'Delete', class: 'btn btn-danger', role: 'button' %>
-      <%= f.add_nested_fields_link :ingredients, 'Add new', class: 'btn btn-primary', role: 'button' %></p>
-     <% end %>
+      <%= form.text_field :recipe_name %>
+       <%# 詳しいオプション : https://github.com/nathanvda/cocoon#link_to_add_association %>
+  <%#= link_to_add_association '材料の追加',
+                              # form_withのformタグ変数
+                              f,
+                              # フォームのデータを追加するモデル名
+                              :ingredients,
+                              # 追加するフォームの部分テンプレート
+                              partial: "ingredient_fields",
+                              # オプション
+                              data: {
+                                # フォームを追加する場所の指定
+                                association_insertion_node: '#ingredient-forms',
+                                # フォームを前後どの位置に追加するか。(初期値: before)
+                                association_insertion_method: 'after'
+                              },
+                              form_name: "f"
+
+  %>
+  <div id="ingredient-forms" >
+    <%= form.fields_for :ingredients do |ingredient| %>
+      <% render 'ingredient_fields', f: ingredient %>
+    <% end %>
+  </div>
+
+  <div class="links">
+     <div class="col text-center mt-3 mb-3">
+        <%= link_to_add_association form, :ingredients, data: {
+        association_insertion_node: '#ingredient-forms',
+        association_insertion_method: 'append' } do %>
+          <button class="btn btn-success text-center" >
+            <i class="nav-icon fas fa-tasks"></i> 案件を追加
+          </button>
+        <% end %>
+     </div>
+  </div>
+
+
     <h4>作り方</h4>
-      <p><%= f.text_area :caption %></p>
-      <%= f.submit '投稿' %>
+      <p><%= form.text_area :caption %></p>
+      <%= form.submit '投稿' %>
   <% end %>
 
   </div>
