--- a/app/views/admins/post_images/show.html.erb
+++ b/app/views/admins/post_images/show.html.erb
@@ -4,12 +4,6 @@
   <div class = "col-md-3">
    <%= image_tag @post_image.image, :size =>'200x200' %>
    <p>料理名:<%= @post_image.recipe_name %></p>
-   <% p "------------" %>
-   <% p "------------" %>
-   <% p @post_image  %>
-   <% p "------------" %>
-   <% p "------------" %>
-
    <p>材料:<%= @post_image.ingredient %></p>
    <p>作り方:<%= @post_image.caption %> </p>
 
@@ -22,13 +16,14 @@
 
   <p>コメント件数:<%= @post_image.post_comments.count %></p>
   <% @post_image.post_comments.each do |post_comment| %>
-      <%= image_tag post_comment.user.get_profile_image(10,10) %>
+     <p><%= image_tag post_comment.user.get_profile_image(10,10) %>
       <%= post_comment.user.name %>
       <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
-      <% if post_comment.user == current_user %>
+      <%# if post_comment.user == current_user %>
       <%= link_to "削除",post_image_post_comment_path(post_comment.post_image,post_comment), method: :delete %>
-      <% end %>
+      <%# end %>
   <% end %>
+  </p>
   <div>
 
 
