--- a/app/views/admins/users/index.html.erb
+++ b/app/views/admins/users/index.html.erb
@@ -15,6 +15,8 @@
           <td><%= image_tag user.get_profile_image(100,100) %></td>
           <td><%= user.name %></td>
           <td><%= link_to "Show", admins_user_path(user.id) %></td>
+          <td><%= link_to "delete", user, method: :delete,
+                                 data: { confirm: "本当に消しますか?" } %></td>
         </tr>
        <% end %>
         </tbody>
