--- a/app/views/admins/users/show.html.erb
+++ b/app/views/admins/users/show.html.erb
@@ -26,33 +26,30 @@
   <%= link_to favorites_user_path(@user.id),class:"btn btn-outline-secondary btn-block" do %>
   いいね一覧
   <% end %>
+  </div>
 
-  <%= link_to new_post_image_path(@user.id),class:"btn btn-outline-secondary btn-block" do %>
-  レシピ投稿
-  <% end %><%#= render 'users/list',user: @user,post_image: @post_image %>
-   </div>
   <div class = "col-md-9">
     <% if @post_images.exists? %>
-<table class='table table-hover table-inverse'>
-  <thead>
-  <tr>
+   <table class='table table-hover table-inverse'>
+    <thead>
+    <tr>
     <th>いいね一覧</th>
     <th></th>
     <th></th>
     <th></th>
-  </tr>
-  </thead>
-  <tbody>
+    </tr>
+    </thead>
+    <tbody>
    <% @favorite_post_images.each do |post_image|%>
     <tr>
-     <td><%= link_to admins_post_image_path(post_image.id) do %>
+     <td><%= link_to admins_post_image_path(:admin,post_image.id) do %>
           <%= image_tag post_image.get_image, :size =>'100x100' %>
           <% end %>
      </td>
      <td><%= post_image.recipe_name %></td>
      <td><%= post_image.user.name %><%= image_tag post_image.user.get_profile_image(50,50) %></td>
      <td>作り方:<%= post_image.caption %></td>
-     <td><%= link_to "#{post_image.post_comments.count} コメント",admins_post_image_path(post_image.id) %></td>
+     <td><%= link_to "#{post_image.post_comments.count} コメント",admins_post_image_path(:admin,post_image.id) %></td>
     </tr>
     </tbody>
     <% end %>
@@ -77,7 +74,7 @@
        <% @post_images.each do |post_image| %>
        <tr>
         <td>
-         <%= link_to post_image_path(post_image.id) do %>
+         <%= link_to admins_post_image_path(:admin, post_image.id) do %>
           <%= image_tag post_image.get_image, :size =>'100x100' %>
          <% end %>
         </td>
@@ -86,29 +83,12 @@
          <td><%= post_image.user.name %><%= image_tag post_image.user.get_profile_image(50,50) %></td>
          <td>作り方:<%= post_image.caption %></td>
                               <%# byebug %>
-         <td><%# if current_user.own?(post_image) %>
-              <%#= link_to "削除",post_image_path(@post_image_id),method: :delete %>
-              ♥<%= post_image.favorites.count %>いいね
-             <%# else %>
-              <%# if post_image.favorited_by?(current_user) %>
-              <%#= link_to post_image_favorites_path(post_image),method: :delete do %>
-               <%#= post_image.favorites.count %>
-              <%# end %>
-
-              <%# else %>
-             　<%#= link_to post_image_favorites_path(post_image),method: :post do %>
-               <%#= post_image.favorites.count %>
-            　<%# end %>
-           　　<%# end %>
-           　<%# end %>
-         </td>
-         <td><%= link_to "#{post_image.post_comments.count} コメント",post_image_path(post_image.id) %></td>
+         <td>♥<%= post_image.favorites.count %>いいね</td>
+         <td><%= link_to "#{post_image.post_comments.count} コメント",admins_post_image_path(:admin,post_image.id) %></td>
        </tr>
        <% end %>
      </table>
     </tbody>
-    <%#= paginate post_images %>
-   <%#= render 'post_images/list',post_images: @post_images %>
   </div>
   </div>
  </div>
