--- a/app/views/post_images/edit.html.erb
+++ b/app/views/post_images/edit.html.erb
@@ -1,24 +1,58 @@
 <div class="container">
  <div class="row">
   <div class = "col-md-3"> </div>
-  <div class = "col-md-6">
-   <h1>Editing Recipe</h1>
-
-   <%= form_with model: @post_image do |f| %>
+  <div class = "col-md-9">
+   <h4><レシピ編集></h4>
+   <%= form_with model: @post_image do |form| %>
     <h4>画像</h4>
-      <%= f.file_field :image, accept: "image/*" %>
+      <%= form.file_field :image, accept: "image/*" %>
     <h4>料理名</h4>
-      <%= f.text_field :recipe_name %>
+      <%= form.text_field :recipe_name %>
     <h4>材料</h4>
-      <%= f.text_field :ingredients %>
-    <h4>作り方</h4>
-      <%= f.text_area :caption %>
-      <%= f.submit 'Update' %>
-    <% end %>
+      <div id="ingredient-forms">
+        <%= form.fields_for :ingredients do |ingredient| %>
+          <% render 'ingredient_fields', f: ingredient %>
+        <% end %>
+      </div>
 
+      <div class="links">
+         <div class="col text-center mt-3 mb-3">
+            <%= link_to_add_association form, :ingredients, data: {
+            association_insertion_node: '#ingredient-forms',
+            association_insertion_method: 'append' } do %>
+              <button class="btn btn-outline-secondary">
+                <i class="nav-icon fas fa-tasks"></i> 追加
+              </button>
+            <% end %>
+         </div>
+      </div>
+
+      <h4>作り方</h4>
+      <div id="caption-forms" >
+        <%= form.fields_for :captions do |caption| %>
+          <% render 'caption_fields', f: caption %>
+        <% end %>
+      </div>
+
+        <div class="links">
+           <div class="col text-center mt-3 mb-3">
+              <%= link_to_add_association form, :captions, data: {
+              association_insertion_node: '#caption-forms',
+              association_insertion_method: 'append' } do %>
+                <button class="btn btn-outline-secondary " >
+                  <i class="nav-icon fas fa-tasks"></i> 追加
+                </button>
+              <% end %>
+           </div>
+        </div>
+        <p><%= form.submit '投稿' %></p>
     <% if @post_image.user == current_user %>
     <%= link_to "Show",post_image_path(@post_image.id) %>
     |
     <%= link_to "Back",post_images_path(@post_image.id) %>
     <% else %>
     <% end %>
+    <% end %>
+    </div>
+    </div>
+    </div>
