投稿フォーム

--- a/app/views/post_images/_ingredient_fields.html.erb
+++ b/app/views/post_images/_ingredient_fields.html.erb
@@ -1,8 +1,7 @@
 <div class="nested-fields">
   <div class="row">
     <div class="col-md-3"><%= f.text_field :name, class: "form-control", placeholder: "材料" %></div>
-    <div class="col-2"><%#= f.text_field :quantity, class: "form-control", placeholder: "分量" %></div>
-    <div class="col-md-2">
+    <div class="col-2">
       <%= link_to_remove_association "削除", f, class: "btn btn-outline-secondary" %>
     </div>
   </div>
