--- a/app/views/post_images/_caption_fields.html.erb
+++ b/app/views/post_images/_caption_fields.html.erb
@@ -1,7 +1,9 @@
 <div class="nested-fields">
   <div class="row">
-    <div class="col-md-3"><%= f.text_field :caption, class: "form-control", placeholder: "作り方" %></div>
-    <div class="col-2"><%#= f.text_field :quantity, class: "form-control", placeholder: "分量" %></div>
+    <div class="col-md-3">
+      <%= f.text_field :caption, class: "form-control", placeholder: "作り方" %>
+    </div>
+    <div class="col-2"></div>
     <div class="col-md-2">
       <%= link_to_remove_association "削除", f, class: "btn btn-outline-secondary" %>
     </div>
